@@ -1,5 +1,7 @@
 1.0.3 release
 
+	* tweak flag_override_resume_data semantics to make more sense (breaks
+	  backwards compatibility of edge-cases)
 	* improve DHT bootstrapping and periodic refresh
 	* improve DHT maintanence performance (by pinging instead of full lookups)
 	* fix bug in DHT routing table node-id prefix optimization
